@@ -1,22 +1,29 @@
 package com.appsmith.server.configurations;
 
+import com.appsmith.external.models.PluginType;
 import com.appsmith.external.models.Policy;
 import com.appsmith.server.acl.AppsmithRole;
 import com.appsmith.server.domains.Application;
-import com.appsmith.server.domains.Workspace;
-import com.appsmith.server.domains.WorkspacePlugin;
 import com.appsmith.server.domains.Page;
+import com.appsmith.server.domains.PermissionGroup;
 import com.appsmith.server.domains.Plugin;
-import com.appsmith.server.domains.PluginType;
+import com.appsmith.server.domains.PricingPlan;
+import com.appsmith.server.domains.Tenant;
 import com.appsmith.server.domains.User;
 import com.appsmith.server.domains.UserRole;
 import com.appsmith.server.domains.UserState;
+import com.appsmith.server.domains.Workspace;
+import com.appsmith.server.domains.WorkspacePlugin;
+import com.appsmith.server.dtos.Permission;
 import com.appsmith.server.dtos.WorkspacePluginStatus;
+import com.appsmith.server.helpers.PolicyUtils;
 import com.appsmith.server.repositories.ApplicationRepository;
-import com.appsmith.server.repositories.WorkspaceRepository;
 import com.appsmith.server.repositories.PageRepository;
+import com.appsmith.server.repositories.PermissionGroupRepository;
 import com.appsmith.server.repositories.PluginRepository;
+import com.appsmith.server.repositories.TenantRepository;
 import com.appsmith.server.repositories.UserRepository;
+import com.appsmith.server.repositories.WorkspaceRepository;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.boot.ApplicationRunner;
 import org.springframework.context.annotation.Bean;
@@ -27,23 +34,25 @@ import reactor.core.publisher.Flux;
 import reactor.core.publisher.Mono;
 
 import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.HashSet;
 import java.util.List;
+import java.util.Map;
 import java.util.Set;
 import java.util.stream.Collectors;
 
 import static com.appsmith.server.acl.AclPermission.MANAGE_APPLICATIONS;
-import static com.appsmith.server.acl.AclPermission.MANAGE_WORKSPACES;
 import static com.appsmith.server.acl.AclPermission.MANAGE_PAGES;
 import static com.appsmith.server.acl.AclPermission.MANAGE_USERS;
-import static com.appsmith.server.acl.AclPermission.WORKSPACE_INVITE_USERS;
-import static com.appsmith.server.acl.AclPermission.WORKSPACE_MANAGE_APPLICATIONS;
-import static com.appsmith.server.acl.AclPermission.WORKSPACE_EXPORT_APPLICATIONS;
+import static com.appsmith.server.acl.AclPermission.MANAGE_WORKSPACES;
 import static com.appsmith.server.acl.AclPermission.READ_APPLICATIONS;
-import static com.appsmith.server.acl.AclPermission.READ_WORKSPACES;
 import static com.appsmith.server.acl.AclPermission.READ_PAGES;
 import static com.appsmith.server.acl.AclPermission.READ_USERS;
+import static com.appsmith.server.acl.AclPermission.READ_WORKSPACES;
 import static com.appsmith.server.acl.AclPermission.USER_MANAGE_WORKSPACES;
+import static com.appsmith.server.acl.AclPermission.WORKSPACE_EXPORT_APPLICATIONS;
+import static com.appsmith.server.acl.AclPermission.WORKSPACE_INVITE_USERS;
+import static com.appsmith.server.acl.AclPermission.WORKSPACE_MANAGE_APPLICATIONS;
 import static org.springframework.data.mongodb.core.query.Criteria.where;
 
 @Slf4j
@@ -56,7 +65,10 @@ public class SeedMongoData {
                            ApplicationRepository applicationRepository,
                            PageRepository pageRepository,
                            PluginRepository pluginRepository,
-                           ReactiveMongoTemplate mongoTemplate) {
+                           ReactiveMongoTemplate mongoTemplate,
+                           TenantRepository tenantRepository,
+                           PermissionGroupRepository permissionGroupRepository,
+                           PolicyUtils policyUtils) {
 
         log.info("Seeding the data");
         final String API_USER_EMAIL = "api_user";
@@ -125,10 +137,10 @@ public class SeedMongoData {
                 .build();
 
         Object[][] userData = {
-                {"user test", TEST_USER_EMAIL, UserState.ACTIVATED, Set.of(readTestUserPolicy, userManageWorkspacePolicy)},
-                {"api_user", API_USER_EMAIL, UserState.ACTIVATED, Set.of(userManageWorkspacePolicy, readApiUserPolicy, manageApiUserPolicy)},
-                {"admin test", ADMIN_USER_EMAIL, UserState.ACTIVATED, Set.of(readAdminUserPolicy, userManageWorkspacePolicy)},
-                {"developer test", DEV_USER_EMAIL, UserState.ACTIVATED, Set.of(readDevUserPolicy, userManageWorkspacePolicy)},
+                {"user test", TEST_USER_EMAIL, UserState.ACTIVATED, new HashSet<>(Arrays.asList(readTestUserPolicy, userManageWorkspacePolicy))},
+                {"api_user", API_USER_EMAIL, UserState.ACTIVATED, new HashSet<>(Arrays.asList(userManageWorkspacePolicy, readApiUserPolicy, manageApiUserPolicy))},
+                {"admin test", ADMIN_USER_EMAIL, UserState.ACTIVATED, new HashSet<>(Arrays.asList(readAdminUserPolicy, userManageWorkspacePolicy))},
+                {"developer test", DEV_USER_EMAIL, UserState.ACTIVATED, new HashSet<>(Arrays.asList(readDevUserPolicy, userManageWorkspacePolicy))},
         };
         Object[][] workspaceData = {
                 {"Spring Test Workspace", "appsmith-spring-test.com", "appsmith.com", "spring-test-workspace",
@@ -152,7 +164,7 @@ public class SeedMongoData {
                 {"Not Installed Plugin Name", PluginType.API, "not-installed-plugin"}
         };
 
-        // Seed the plugin data into the DB 
+        // Seed the plugin data into the DB
         Flux<Plugin> pluginFlux = Flux.just(pluginData)
                 .map(array -> {
                     log.debug("Creating the plugins");
@@ -165,16 +177,52 @@ public class SeedMongoData {
                 }).flatMap(pluginRepository::save)
                 .cache();
 
+        Tenant defaultTenant = new Tenant();
+        defaultTenant.setDisplayName("Default");
+        defaultTenant.setSlug("default");
+        defaultTenant.setPricingPlan(PricingPlan.FREE);
+
+        Mono<String> defaultTenantId = tenantRepository.findBySlug("default")
+                .switchIfEmpty(tenantRepository.save(defaultTenant))
+                .map(Tenant::getId)
+                .cache();
+
         Flux<User> userFlux = Flux.just(userData)
-                .map(array -> {
+                .flatMap(array -> {
                     log.debug("Going to create bare users");
                     User user = new User();
                     user.setName((String) array[0]);
                     user.setEmail((String) array[1]);
                     user.setState((UserState) array[2]);
                     user.setPolicies((Set<Policy>) array[3]);
-                    log.debug("Bare user: {}", user);
-                    return user;
+                    return userRepository.save(user);
+                })
+                .flatMap(user -> {
+                    PermissionGroup permissionGroupUser = new PermissionGroup();
+                    permissionGroupUser.setPermissions(Set.of(new Permission(user.getId(), MANAGE_USERS)));
+                    permissionGroupUser.setName(user.getId() + "User Name");
+                    permissionGroupUser.setAssignedToUserIds(Set.of(user.getId()));
+                    return permissionGroupRepository.save(permissionGroupUser)
+                            .flatMap(savedPermissionGroup -> {
+                                Map<String, Policy> crudUserPolicies = policyUtils.generatePolicyFromPermissionGroupForObject(savedPermissionGroup,
+                                        user.getId());
+
+                                User updatedWithPolicies = policyUtils.addPoliciesToExistingObject(crudUserPolicies, user);
+
+                                return userRepository.save(updatedWithPolicies);
+                            });
+                })
+                .collectList()
+                .zipWith(defaultTenantId)
+                .flatMapMany(tuple -> {
+                    List<User> users = tuple.getT1();
+                    String tenantId = tuple.getT2();
+                    return Flux.fromIterable(users)
+                            .map(user -> {
+                                user.setTenantId(tenantId);
+                                log.debug("Creating user: {}", user);
+                                return user;
+                            });
                 })
                 .flatMap(userRepository::save)
                 .cache();
@@ -237,7 +285,8 @@ public class SeedMongoData {
                                         log.debug("Saved the workspace to user. User: {}", u);
                                         return u;
                                     });
-                        }));
+                        })
+                );
 
         Query workspaceNameQuery = new Query(where("slug").is(workspaceData[0][3]));
         Mono<Workspace> workspaceByNameMono = mongoTemplate.findOne(workspaceNameQuery, Workspace.class)
@@ -280,5 +329,6 @@ public class SeedMongoData {
                     )
                     .blockLast();
         };
+
     }
 }
